[WIP] build raphnetraw plugin and dependencies in and add a basic toggle to use it

--- a/Makefile.common
+++ b/Makefile.common
@@ -8,16 +8,21 @@ RSPDIR_PARALLEL    = $(ROOT_DIR)/mupen64plus-rsp-paraLLEl
 AUDIO_LIBRETRO_DIR = $(ROOT_DIR)/custom/mupen64plus-core/plugin/audio_libretro
 VIDEODIR_GLIDEN64  = $(ROOT_DIR)/GLideN64
 VIDEODIR_ANGRYLION = $(ROOT_DIR)/mupen64plus-video-angrylion
+INPUTDIR_RAPHNET   = $(ROOT_DIR)/mupen64plus-input-raphnetraw
+HIDAPI_DIR         = $(ROOT_DIR)/hidapi
 
 DYNAREC_USED := 0
 
 INCFLAGS += \
 	-I$(ROOT_DIR)/custom \
 	-I$(ROOT_DIR)/custom/mupen64plus-core \
+	-I$(ROOT_DIR)/custom/mupen64plus-input-raphnetraw \
 	-I$(ROOT_DIR)/custom/android/include \
 	-I$(ROOT_DIR)/custom/GLideN64 \
 	-I$(VIDEODIR_GLIDEN64)/src \
 	-I$(VIDEODIR_GLIDEN64)/src/osal \
+	-I$(HIDAPI_DIR)/hidapi \
+	-I$(INPUTDIR_RAPHNET)/src \
 	-I$(CORE_DIR)/src \
 	-I$(CORE_DIR)/src/api \
 	-I$(AUDIO_LIBRETRO_DIR) \
@@ -137,6 +142,9 @@ SOURCES_C = \
 AWK_DEST_DIR    := $(CORE_DIR)/src/asm_defines
 ASM_DEFINES_OBJ := $(AWK_DEST_DIR)/asm_defines.o
 
+# hidapi
+SOURCES_C += $(HIDAPI_DIR)/linux/hid.c
+
 # MD5 lib
 SOURCES_C += \
 	$(CORE_DIR)/subprojects/md5/md5.c
@@ -231,7 +239,14 @@ SOURCES_C += $(LIBRETRO_DIR)/libretro.c \
 	$(ROOT_DIR)/custom/mupen64plus-core/api/vidext_libretro.c \
 	$(LIBRETRO_COMM_DIR)/glsm/glsm.c
 
-	
+# raphnetraw
+SOURCES_C += $(ROOT_DIR)/custom/mupen64plus-input-raphnetraw/plugin_front.c \
+	$(INPUTDIR_RAPHNET)/src/plugin_back.c \
+	$(INPUTDIR_RAPHNET)/src/gcn64lib.c \
+	$(INPUTDIR_RAPHNET)/src/gcn64.c \
+	$(INPUTDIR_RAPHNET)/src/hexdump.c \
+	$(INPUTDIR_RAPHNET)/src/osal_dynamiclib_unix.c
+
 SOURCES_CXX   += \
 	$(VIDEODIR_GLIDEN64)/src/Combiner.cpp                                                         \
     $(VIDEODIR_GLIDEN64)/src/CombinerKey.cpp                                                      \
